fix: overflow scroll

--- a/app/global.css
+++ b/app/global.css
@@ -59,7 +59,6 @@
   }
 }
 
-html,
 body {
   overflow-x: hidden;
 }
